--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "sockjs-client": "^1.1.2",
     "style-loader": "0.13.1",
     "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0"
+    "webpack-dev-server": "2.3.0",
+    "url-loader": "^1.1.1"
   },
   "dependencies": {
+    "emoji-js": "^3.4.1",
+    "emoji-picker-react": "^2.1.1",
     "react": "15.4.2",
     "react-dom": "15.4.2"
   }
